* Updated WP Editor to work with WordPress 3.4+ * Added HTML and HTM icons
git-svn-id: https://plugins.svn.wordpress.org/wp-editor/trunk@559286 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/wpeditor.css
+++ b/wpeditor.css
@@ -211,6 +211,12 @@ li.indent {
 #plugin-editor-files .plugin-folders ul li.jpeg, #theme-editor-files .theme-folders ul li.jpeg {
   background:url('images/jpg.png') 0px 0px no-repeat;
 }
+#plugin-editor-files .plugin-folders ul li.htm, #theme-editor-files .theme-folders ul li.htm {
+  background:url('images/htm.png') 0px 0px no-repeat;
+}
+#plugin-editor-files .plugin-folders ul li.html, #theme-editor-files .theme-folders ul li.html {
+  background:url('images/html.png') 0px 0px no-repeat;
+}
 span.tiny {
   font-size:10px;
 }
