--- a/extensions/codemirror/codemirror.css
+++ b/extensions/codemirror/codemirror.css
@@ -1,9 +1,5 @@
-.CodeMirror {
-  line-height: 1em;
-  font-family: monospace;
-}
-
 .CodeMirror-scroll {
+  border:1px solid #ccc;
   overflow: auto;
   /* This is needed to prevent an IE[67] bug where the scrolled content
      is visible outside of the scrolling box. */
