* Added syntax highlighter for page/post editor * Added in monospace font for default theme/plugin/post editor * Updated Edit links in plugins page to work with WP 3.4 updates * Updated CSS themes to limit number of resources loaded * Updated CSS highlighting for Ruby Blue and Monokai themes * Fixed theme and plugin editors to allow disabling of line wrapping
git-svn-id: https://plugins.svn.wordpress.org/wp-editor/trunk@585556 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/wpeditor.css
+++ b/wpeditor.css
@@ -235,6 +235,12 @@ span.tiny {
   height:450px;
   width:97%;
 }
+.wp-editor-container .CodeMirror {
+  width:100% !important;
+}
+.wp-editor-container .CodeMirror-scroll {
+  border:none;
+}
 .CodeMirror-scroll {
   height:450px;
 }
@@ -252,7 +258,7 @@ span.tiny {
   background:#A8F !important;
 }
 .activeline-monokai {
-  background:#FFE792 !important;
+  background:#00F !important;
 }
 .activeline-rubyblue {
   background:#00F !important;
