--- a/extensions/codemirror/codemirror.css
+++ b/extensions/codemirror/codemirror.css
@@ -1,3 +1,41 @@
+.wpe-quicktags-toolbar {
+  -webkit-border-top-right-radius: 3px;
+  -webkit-border-top-left-radius: 3px;
+  border-top-right-radius: 3px;
+  border-top-left-radius: 3px;
+  min-height: 29px;
+  border-bottom: 1px solid #CCC;
+  padding: 2px 8px 0;
+  background-color: #E9E9E9;
+  color: #333;
+  background-image: -ms-linear-gradient(bottom,#DDD,#E9E9E9);
+  background-image: -moz-linear-gradient(bottom,#DDD,#E9E9E9);
+  background-image: -o-linear-gradient(bottom,#DDD,#E9E9E9);
+  background-image: -webkit-linear-gradient(bottom,#DDD,#E9E9E9);
+  background-image: linear-gradient(bottom,#DDD,#E9E9E9);
+}
+.wpe-quicktags-toolbar input {
+margin: 2px 1px 4px;
+line-height: 18px;
+display: inline-block;
+min-width: 26px;
+padding: 2px 4px;
+font: 12px/18px Arial,Helvetica,sans-serif normal;
+color: #464646;
+border: 1px solid #C3C3C3;
+-webkit-border-radius: 3px;
+border-radius: 3px;
+background-color: #EEE;
+background-image: -ms-linear-gradient(bottom,#E3E3E3,white);
+background-image: -moz-linear-gradient(bottom,#E3E3E3,white);
+background-image: -o-linear-gradient(bottom,#E3E3E3,white);
+background-image: -webkit-linear-gradient(bottom,#E3E3E3,white);
+background-image: linear-gradient(bottom,#E3E3E3,white);
+}
+.CodeMirror {
+  line-height: 1em;
+  font-family: monospace;
+}
 .CodeMirror-scroll {
   border:1px solid #ccc;
   overflow: auto;
