* Added ability to customize tab characters and size for all editors * Added ability to set custom editor heights for all editors * Updated CodeMirror library to 2.33 * Updated CSS to work with new version of CodeMirror * Fixed issue with media button toolbar not inserting shortcodes/content when in visual mode * Fixed issue with blockquote QuickTag inserting twice
git-svn-id: https://plugins.svn.wordpress.org/wp-editor/trunk@593024 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/extensions/codemirror/codemirror.css
+++ b/extensions/codemirror/codemirror.css
@@ -43,6 +43,36 @@ background-image: linear-gradient(bottom,#E3E3E3,white);
      is visible outside of the scrolling box. */
   position: relative;
 }
+
+/* Vertical scrollbar */
+.CodeMirror-scrollbar {
+  position: absolute;
+  right: 0; top: 0;
+  overflow-x: hidden;
+  overflow-y: scroll;
+  z-index: 5;
+}
+.CodeMirror-scrollbar-inner {
+  /* This needs to have a nonzero width in order for the scrollbar to appear
+     in Firefox and IE9. */
+  width: 1px;
+}
+.CodeMirror-scrollbar.cm-sb-overlap {
+  /* Ensure that the scrollbar appears in Lion, and that it overlaps the content
+     rather than sitting to the right of it. */
+  position: absolute;
+  z-index: 1;
+  float: none;
+  right: 0;
+  min-width: 12px;
+}
+.CodeMirror-scrollbar.cm-sb-nonoverlap {
+  min-width: 12px;
+}
+.CodeMirror-scrollbar.cm-sb-ie7 {
+  min-width: 18px;
+}
+
 .CodeMirror-fullscreen {
   display:block;
   position:fixed !important;
