--- a/wpeditor.css
+++ b/wpeditor.css
@@ -254,13 +254,10 @@ span.tiny {
 .activeline-cobalt {
   background:#B36539 !important;
 }
-.activeline-night {
+.activeline-night, .activeline-ambiance, .activeline-blackboard, .activeline-lesser-dark, .activeline-vibrant-ink, .activeline-xq-dark {
   background:#A8F !important;
 }
-.activeline-monokai {
-  background:#00F !important;
-}
-.activeline-rubyblue {
+.activeline-monokai, .activeline-rubyblue {
   background:#00F !important;
 }
 .checkbox_label {
@@ -293,4 +290,38 @@ a.donate, a.support {
   -moz-box-shadow:0px 1px 3px rgba(000,000,000,0.5);
   -webkit-box-shadow:0px 1px 3px rgba(000,000,000,0.5);
   text-shadow:1px 1px 2px rgba(000,000,000,.8);
+}
+.wpe-quicktags-toolbar {
+  -webkit-border-top-right-radius: 3px;
+  -webkit-border-top-left-radius: 3px;
+  border-top-right-radius: 3px;
+  border-top-left-radius: 3px;
+  min-height: 29px;
+  border-bottom: 1px solid #CCC;
+  padding: 2px 8px 0;
+  background-color: #E9E9E9;
+  color: #333;
+  background-image: -ms-linear-gradient(bottom,#DDD,#E9E9E9);
+  background-image: -moz-linear-gradient(bottom,#DDD,#E9E9E9);
+  background-image: -o-linear-gradient(bottom,#DDD,#E9E9E9);
+  background-image: -webkit-linear-gradient(bottom,#DDD,#E9E9E9);
+  background-image: linear-gradient(bottom,#DDD,#E9E9E9);
+}
+.wpe-quicktags-toolbar input {
+  margin: 2px 1px 4px;
+  line-height: 18px;
+  display: inline-block;
+  min-width: 26px;
+  padding: 2px 4px;
+  font: 12px/18px Arial,Helvetica,sans-serif normal;
+  color: #464646;
+  border: 1px solid #C3C3C3;
+  -webkit-border-radius: 3px;
+  border-radius: 3px;
+  background-color: #EEE;
+  background-image: -ms-linear-gradient(bottom,#E3E3E3,white);
+  background-image: -moz-linear-gradient(bottom,#E3E3E3,white);
+  background-image: -o-linear-gradient(bottom,#E3E3E3,white);
+  background-image: -webkit-linear-gradient(bottom,#E3E3E3,white);
+  background-image: linear-gradient(bottom,#E3E3E3,white);
 }
