* Added feature to preserve scroll position in post editor on save and toggle between Visual/Text views * Added z-index fix for gutter when WordPress menu is collapsed * Added ability to edit .less files * Added ability to change the editor font size for plugin, theme and page/post editors * Fixed window resize issue with codemirror expanding past its boundaries
git-svn-id: https://plugins.svn.wordpress.org/wp-editor/trunk@697158 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/wpeditor.css
+++ b/wpeditor.css
@@ -210,6 +210,9 @@ li.indent {
 #plugin-editor-files .plugin-folders ul li.pot, #theme-editor-files .theme-folders ul li.pot {
   background:url('images/pot.png') 0px 0px no-repeat;
 }
+#plugin-editor-files .plugin-folders ul li.less, #theme-editor-files .theme-folders ul li.less {
+  background:url('images/less.png') 0px 0px no-repeat;
+}
 #plugin-editor-files .plugin-folders ul li.png, #theme-editor-files .theme-folders ul li.png {
   background:url('images/png.png') 0px 0px no-repeat;
 }
