* Added ability to create new plugins and themes from inside the plugin/theme editors * Added ability to download plugins and themes * Added ability to download individual plugin and theme files being edited * Added ability to save page/post editor in fullscreen mode * Updated width of AJAX Browser in plugin/theme editors * Fixed QuickPress editor not working for Author Role * Fixed PHP Warning when viewing drop-ins and mustuse plugins * Fixed display of warning message for active theme * Fixed typos on settings page
git-svn-id: https://plugins.svn.wordpress.org/wp-editor/trunk@803441 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/wpeditor.css
+++ b/wpeditor.css
@@ -351,3 +351,4 @@ a.donate, a.support {
 .editor-button {
   font-family:Arial, Helvetica, 'sans-serif normal';
 }
+#templateside { margin-left: 20px; width: 300px; }
