--- a/wpeditor.css
+++ b/wpeditor.css
@@ -355,3 +355,20 @@ a.donate, a.support {
   font-family:Arial, Helvetica, 'sans-serif normal';
 }
 #templateside { margin-left: 20px; width: 300px; }
+.quicktags-toolbar input {
+  margin: 2px 1px 4px;
+  line-height: 18px;
+  display: inline-block;
+  min-width: 26px;
+  padding: 2px 4px;
+  font: 12px/18px "Open Sans", sans-serif;
+  color: #464646;
+  cursor: pointer;
+  border: 1px solid #c3c3c3;
+  -webkit-border-radius: 3px;
+  border-radius: 3px;
+  background: #eee;
+  background-image: -webkit-gradient(linear, left bottom, left top, from(#e3e3e3), to(#fff));
+  background-image: -webkit-linear-gradient(bottom, #e3e3e3, #fff);
+  background-image: linear-gradient(to top, #e3e3e3, #fff);
+}
